Fix text-align bug not to show in center

--- a/frontend/src/components/atoms/button/style.css
+++ b/frontend/src/components/atoms/button/style.css
@@ -1,5 +1,5 @@
 .button_root {
-  display: inline-flex;
+  display: box;
   position: relative;
   align-items: center;
   justify-content: center;
